Clarified the service/repo boundary. Updated tests.